ags (0.7.122.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead-lock as removing line member
	* improved plugin browser to reset plugin type
	* improved the speed of functional tests
	* added functional test to check line member sanity

ags (0.7.122.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsClearAudioSignal task
	* fixed ags_synth_update() it didn't clear the buffers correctly
	* added functional test to check link sanity

ags (0.7.122.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory corruption of AgsFFPlayer destruction
	* fixed some AgsConnectable::disconnect() of machines
	* fixed potential infinite loop in ags_machine_resize_audio_channels()
	* added functional test add and destroy machine
	* added functional tests resize pads and audio channels

ags (0.7.122.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing connect of AgsOscillator
	* fixed noise creation in AgsSynth
	* fixed SIGSEGV as adding plugin to AgsLine

ags (0.7.122.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented notebook resize in automation editor
	* fixed NULL pointer dereference in ags_matrix.c
	* fixed resize pad to distinguish between input and output

ags (0.7.122.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* stability improvements

ags (0.7.122.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* decoupled gui thread

ags (0.7.122.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixes to configuration in place
	* fixes to audio connection editor

ags (0.7.122.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: implemented ags-play-pattern recall
	* fixed broken optical feedback of peak
	* removed auto-scroll feature because it costs too much performance

ags (0.7.122.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]